--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap");
 body {
   margin: 0;
   padding: 0;
@@ -6,10 +7,88 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
+.teslaFont{
+  font-family: "Gotham Book",sans-serif;
+}
+@font-face {
+  font-family: "Gotham Book";
+  src: url("./projectsImages/Gotham_Book.otf");
+}
+.font {
+  font-family: "Rubik Dirt", cursive;
+}
+.animation-fly2 {
+  animation: fly2 4s linear;
+}
+.animation-fly {
+  animation: fly 4s linear;
+}
 
 .font-logo{
   font-family: 'Lato', sans-serif;
 }
+@keyframes fly {
+  0% {
+    left: 0;
+    bottom: 90%;
+  }
+  10% {
+    left: 10%;
+    bottom: 80%;
+  }
+  20% {
+    left: 20%;
+    bottom: 70%;
+  }
+  30% {
+    left: 30%;
+    bottom: 60%;
+  }
+  40% {
+    left: 40%;
+    bottom: 50%;
+  }
+  50% {
+    left: 50%;
+    bottom: 40%;
+  }
+  60% {
+    left: 60%;
+    bottom: 50%;
+  }
+  70% {
+    left: 70%;
+    bottom: 60%;
+  }
+  80% {
+    left: 80%;
+    bottom: 70%;
+  }
+  90% {
+    left: 90%;
+    bottom: 80%;
+  }
+  100% {
+    left: 100%;
+    bottom: 90%;
+  }
+}
+@keyframes fly2 {
+  0% {
+    left: 0;
+  }
+  70% {
+    left: 50%;
+  }
+  90% {
+    left: 50%;
+    bottom:89%;
+  }
+  100% {
+    left: 50%;
+    bottom: 5%;
+  }}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
